--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,10 @@ services:
     container_name: mariadb
     image: mariadb:latest
     environment:
-      - MYSQL_ROOT_PASSWORD: password
-      - MYSQL_DATABASE: darkflame
-      - MYSQL_USER: darkflame
-      - MYSQL_PASSWORD: darkflame_pw
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=darkflame
+      - MYSQL_USER=darkflame
+      - MYSQL_PASSWORD=darkflame_pw
     networks:
       - darkflame_net
     ports:
